--- a/tmechfrontend/src/Pages/HomePage/HomePage.css
+++ b/tmechfrontend/src/Pages/HomePage/HomePage.css
@@ -5,3 +5,8 @@
 .search_result:hover{
   box-shadow: 0px 0px 10px grey, 0px 5px 15px grey!important;
 }
+
+@keyframes moveUp {
+  from{top:200px;}
+  to{top:0px;}
+}
